--- a/doc/changes/0.6.2.rst
+++ b/doc/changes/0.6.2.rst
@@ -12,7 +12,7 @@ ENHANCEMENTS
 ------------
 
 - Generated documentation now includes Binder links to launch examples interactively in the browser (:gh:`2300` by `Elizabeth DuPre`_).
-- :class:`~input_data.NiftiSpheresMasker` now has an inverse transform, projecting spheres to the corresponding ``mask_img`` (:gh:`2429` by `Simon Steinkamp`_).
+- :class:`~maskers.NiftiSpheresMasker` now has an inverse transform, projecting spheres to the corresponding ``mask_img`` (:gh:`2429` by `Simon Steinkamp`_).
 
 Fixes
 -----
