--- a/doc/changes/0.7.0.rst
+++ b/doc/changes/0.7.0.rst
@@ -67,7 +67,7 @@ NEW
 - :func:`nilearn.plotting.plot_markers` shows network nodes (markers) on a glass
   brain template and color code them according to provided nodal measure (i.e.
   connection strength). This function will replace
-  :func:`nilearn.plotting.plot_connectome_strength`.
+  ``nilearn.plotting.plot_connectome_strength``.
 - New plotting function
   :func:`nilearn.plotting.plot_surf_contours` plots the contours of regions of
   interest on the surface, optionally overlaid on top of a statistical map.
@@ -104,9 +104,9 @@ Fixes
 Changes
 -------
 
-- :func:`nilearn.datasets.fetch_cobre` has been deprecated and will be
+- Function ``nilearn.datasets.fetch_cobre`` has been deprecated and will be
   removed in release 0.9 .
-- :func:`nilearn.plotting.plot_connectome_strength` has been deprecated and will
+- Function ``nilearn.plotting.plot_connectome_strength`` has been deprecated and will
   be removed in release 0.9 .
 
 - :class:`nilearn.connectome.ConnectivityMeasure` can now remove
