--- a/doc/changes/0.9.0.rst
+++ b/doc/changes/0.9.0.rst
@@ -117,7 +117,7 @@ Enhancements
 
 - Importing :mod:`nilearn.plotting` will now raise a warning if the ``matplotlib`` backend has been changed from its original value, instead of silently modifying it (:gh:`3077` by `Raphael Meudec`_).
 
-- Function :func:`~plotting.plot_img` and deriving functions like :func:`~plotting.plot_anat`, :func:`~plotting.plot_stat_map`, or :func:`~plotting.plot_epi` now accept an optional argument ``cbar_tick_format`` to specify how numbers should be displayed on the colorbar. This is consistent with the API of surface plotting functions (see release :ref:`v0.7.1`). The default format is scientific notation (:gh:`2859` by `Nicolas Gensollen`_).
+- Function :func:`~plotting.plot_img` and deriving functions like :func:`~plotting.plot_anat`, :func:`~plotting.plot_stat_map`, or :func:`~plotting.plot_epi` now accept an optional argument ``cbar_tick_format`` to specify how numbers should be displayed on the colorbar. This is consistent with the API of surface plotting functions (see release `v0.7.1`_). The default format is scientific notation (:gh:`2859` by `Nicolas Gensollen`_).
 
 
 Changes
