Add a topic about choosing the right model.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1160,3 +1160,13 @@ The dominant view that perceptual learning is accompanied by changes in early se
   year={2012},
   publisher={Elsevier}
 }
+
+@article{abdulrahman2016effect,
+  title={Effect of trial-to-trial variability on optimal event-related fMRI design: Implications for Beta-series correlation and multi-voxel pattern analysis},
+  author={Abdulrahman, Hunar and Henson, Richard N},
+  journal={NeuroImage},
+  volume={125},
+  pages={756--766},
+  year={2016},
+  publisher={Elsevier}
+}
