Fix multiline abstracts in bibliography

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -541,8 +541,7 @@ abstract = {Multivariate machine learning methods are increasingly used to analy
     doi = {https://doi.org/10.1016/j.neuron.2011.02.054},
     url = {https://www.sciencedirect.com/science/article/pii/S0896627311002960},
     author = {Thorsten Kahnt and Marcus Grueschow and Oliver Speck and John-Dylan Haynes},
-    abstract = {Summary
-The dominant view that perceptual learning is accompanied by changes in early sensory representations has recently been challenged. Here we tested the idea that perceptual learning can be accounted for by reinforcement learning involving changes in higher decision-making areas. We trained subjects on an orientation discrimination task involving feedback over 4 days, acquiring fMRI data on the first and last day. Behavioral improvements were well explained by a reinforcement learning model in which learning leads to enhanced readout of sensory information, thereby establishing noise-robust representations of decision variables. We find stimulus orientation encoded in early visual and higher cortical regions such as lateral parietal cortex and anterior cingulate cortex (ACC). However, only activity patterns in the ACC tracked changes in decision variables during learning. These results provide strong evidence for perceptual learning-related changes in higher order areas and suggest that perceptual and reward learning are based on a common neurobiological mechanism.}
+    abstract = {The dominant view that perceptual learning is accompanied by changes in early sensory representations has recently been challenged. Here we tested the idea that perceptual learning can be accounted for by reinforcement learning involving changes in higher decision-making areas. We trained subjects on an orientation discrimination task involving feedback over 4 days, acquiring fMRI data on the first and last day. Behavioral improvements were well explained by a reinforcement learning model in which learning leads to enhanced readout of sensory information, thereby establishing noise-robust representations of decision variables. We find stimulus orientation encoded in early visual and higher cortical regions such as lateral parietal cortex and anterior cingulate cortex (ACC). However, only activity patterns in the ACC tracked changes in decision variables during learning. These results provide strong evidence for perceptual learning-related changes in higher order areas and suggest that perceptual and reward learning are based on a common neurobiological mechanism.}
 }
 
 
@@ -667,11 +666,10 @@ The dominant view that perceptual learning is accompanied by changes in early se
 	url = {https://www.sciencedirect.com/science/article/pii/S0896627308009586},
 	author = {Yoichi Miyawaki and Hajime Uchida and Okito Yamashita and Masa-aki Sato and Yusuke Morito and Hiroki C. Tanabe and Norihiro Sadato and Yukiyasu Kamitani},
 	keywords = {SYSNEURO},
-	abstract = {Summary
-	Perceptual experience consists of an enormous number of possible states. Previous fMRI studies have predicted a perceptual state by classifying brain activity into prespecified categories. Constraint-free visual image reconstruction is more challenging, as it is impractical to specify brain activity for all possible images. In this study, we reconstructed visual images by combining local image bases of multiple scales, whose contrasts were independently decoded from fMRI activity by automatically selecting relevant voxels and exploiting their correlated patterns. Binary-contrast, 10 × 10-patch images (2100 possible states) were accurately reconstructed without any image prior on a single trial or volume basis by measuring brain activity only for several hundred random images. Reconstruction was also used to identify the presented image among millions of candidates. The results suggest that our approach provides an effective means to read out complex perceptual states from brain activity while discovering information representation in multivoxel patterns.}
+	abstract = {Perceptual experience consists of an enormous number of possible states. Previous fMRI studies have predicted a perceptual state by classifying brain activity into prespecified categories. Constraint-free visual image reconstruction is more challenging, as it is impractical to specify brain activity for all possible images. In this study, we reconstructed visual images by combining local image bases of multiple scales, whose contrasts were independently decoded from fMRI activity by automatically selecting relevant voxels and exploiting their correlated patterns. Binary-contrast, 10 × 10-patch images (2100 possible states) were accurately reconstructed without any image prior on a single trial or volume basis by measuring brain activity only for several hundred random images. Reconstruction was also used to identify the presented image among millions of candidates. The results suggest that our approach provides an effective means to read out complex perceptual states from brain activity while discovering information representation in multivoxel patterns.}
 }
 
-@ARTICLE{Nielsen2013Multisite,
+@article{Nielsen2013Multisite,
 	AUTHOR={Nielsen, Jared and Zielinski, Brandon and Fletcher, P and Alexander, Andrew and Lange, Nicholas and Bigler, Erin and Lainhart, Janet and Anderson, Jeffrey},
 	TITLE={Multisite functional connectivity MRI classification of autism: ABIDE results},
 	JOURNAL={Frontiers in Human Neuroscience},
