Combine plot_fiac_analysis and plot_fixed_effects.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -153,6 +153,18 @@
 }
 
 
+@article{dehaene2006functional,
+	title={Functional segregation of cortical language areas by sentence repetition},
+	author={Dehaene-Lambertz, Ghislaine and Dehaene, Stanislas and Anton, Jean-Luc and Campagne, Aurelie and Ciuciu, Philippe and Dehaene, Guillaume P and Denghien, Isabelle and Jobert, Antoinette and LeBihan, Denis and Sigman, Mariano and others},
+	journal={Human brain mapping},
+	volume={27},
+	number={5},
+	pages={360--371},
+	year={2006},
+	publisher={Wiley Online Library}
+}
+
+
 @inproceedings{dohmatob:hal-01147731,
   TITLE = {{Speeding-up model-selection in GraphNet via early-stopping and univariate feature-screening}},
   AUTHOR = {Dohmatob, Elvis and Eickenberg, Michael and Thirion, Bertrand and Varoquaux, Ga{\"e}l},
