--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1266,3 +1266,58 @@ The dominant view that perceptual learning is accompanied by changes in early se
 	url={https://doi.org/10.1016/j.neuroimage.2008.03.061},
 	doi={10.1016/j.neuroimage.2008.03.061}
 }
+
+@book{Montgomery,
+  author = {Montgomery, Douglas C. and Peck, Elizabeth A. and Vining, Geoffrey G.},
+  isbn = {0471754951},
+  keywords = {montgomery},
+  publisher = {Wiley \& Sons},
+  title = {Introduction to Linear Regression Analysis (4th ed.)},
+  year = 2006
+}
+
+@book{GreeneEconometric,
+  author = {Greene, William H.},
+  edition = {Fifth},
+  isbn = {0-13-066189-9},
+  keywords = {textbook statistics economics},
+  publisher = {Pearson Education},
+  title = {Econometric Analysis},
+  url = {http://pages.stern.nyu.edu/~wgreene/Text/econometricanalysis.htm},
+  year = 2003
+}
+
+@book{GVK393847152,
+  address = {New York, NY [u.a.]},
+  author = {Davidson, {Russell} and MacKinnon, {James G.}},
+  isbn = {978-0-19-512372-2},
+  keywords = {Econometrics Methoden_und_Techniken_der_Betriebswirtschaft Methoden_und_Techniken_der_Volkswirtschaft Schätzfunktion Ökonometrie},
+  publisher = {Oxford Univ. Press},
+  title = {Econometric theory and methods},
+  url = {http://gso.gbv.de/DB=2.1/CMD?ACT=SRCHA&SRT=YOP&IKT=1016&TRM=ppn+393847152&sourceid=fbw_bibsonomy},
+  year = 2004,
+  pages = {662}
+}
+
+@book{Montgomery_68,
+  author = {Montgomery, Douglas C. and Peck, Elizabeth A. and Vining, Geoffrey G.},
+  isbn = {0471754951},
+  keywords = {montgomery},
+  publisher = {Wiley \& Sons},
+  title = {Introduction to Linear Regression Analysis (4th ed.)},
+  year = 2006
+}
+
+@article{InferenceRosenblatt,
+title = "All-Resolutions Inference for brain imaging",
+author = "Rosenblatt, {Jonathan D.} and Livio Finos and Weeda, {Wouter D.} and Aldo Solari and Goeman, {Jelle J.}",
+year = "2018",
+month = nov,
+doi = "10.1016/j.neuroimage.2018.07.060",
+language = "English",
+volume = "181",
+pages = "786--796",
+journal = "NeuroImage",
+issn = "1053-8119",
+publisher = "Academic Press Inc.",
+}
